--- a/NormalBlendedDecalSample.htm
+++ b/NormalBlendedDecalSample.htm
@@ -77,6 +77,12 @@
 			<span class="subprojmetagpu">N/A</span>
 		</div>
 		
+		
+		<div class="subprojmetadata">
+			<b class="small">@ GitHub:</b>
+			<span class="subprojmetagpu"><a target="_blank" href="https://github.com/NVIDIAGameWorks/GraphicsSamples/tree/master/samples/gl4-maxwell/NormalBlendedDecal">Normal Blended Decal Sample Source Code</a></span>
+		</div>
+		
 	</div>
 	
 	<div class="row">
