--- a/BloomSample.htm
+++ b/BloomSample.htm
@@ -75,6 +75,12 @@
 			<span class="subprojmetagpu">Tegra 4</span>
 		</div>
 		
+		
+		<div class="subprojmetadata">
+			<b class="small">@ GitHub:</b>
+			<span class="subprojmetagpu"><a target="_blank" href="https://github.com/NVIDIAGameWorks/GraphicsSamples/tree/master/samples/es2-aurora/Bloom">Bloom Sample Source Code</a></span>
+		</div>
+		
 	</div>
 	
 	<div class="row">
