--- a/FXAASample.htm
+++ b/FXAASample.htm
@@ -77,6 +77,12 @@
 			<span class="subprojmetagpu">Tegra 4</span>
 		</div>
 		
+		
+		<div class="subprojmetadata">
+			<b class="small">@ GitHub:</b>
+			<span class="subprojmetagpu"><a target="_blank" href="https://github.com/NVIDIAGameWorks/GraphicsSamples/tree/master/samples/es3-kepler/FXAA">FXAA Sample Source Code</a></span>
+		</div>
+		
 	</div>
 	
 	<div class="row">
