--- a/ThreadedRenderingVulkanSample.htm
+++ b/ThreadedRenderingVulkanSample.htm
@@ -75,6 +75,12 @@
 			<span class="subprojmetagpu">Tegra K1</span>
 		</div>
 		
+		
+		<div class="subprojmetadata">
+			<b class="small">@ GitHub:</b>
+			<span class="subprojmetagpu"><a target="_blank" href="https://github.com/NVIDIAGameWorks/GraphicsSamples/tree/master/samples/vk10-kepler/ThreadedRenderingVk">Threaded Rendering Vulkan Sample Source Code</a></span>
+		</div>
+		
 	</div>
 	
 	<div class="row">
